ingress_demo_3/ingress-demo-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "webserver-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-086ec9830cf22fcdc,subnet-08713199ba0bb3316,subnet-0ca6b4e0b37204877
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: webserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /frontend/
            pathType: Prefix
            backend:
              service: 
                name: "service-frontend"
                port: 
                  number: 80    
          - path: /backend/
            pathType: Prefix
            backend:
              service: 
                name: "service-frontend"
                port: 
                  number: 80
